<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BoaViagem</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="erro_autenticacao">Erro na autênticação! Favor verificar usuário e senha informado.</string>
    <string name="novo_gasto">Novo Gasto</string>
    <string name="nova_viagem">Nova Viagem</string>
    <string name="minhas_viagens">Minhas Viagens</string>
    <string name="configuracoes">Configurações</string>
    <string name="destino">Destino</string>
    <string name="tipo_viagem">Tipo de viagem</string>
    <string name="lazer">Lazer</string>
    <string name="negocios">Negócios</string>
    <string name="chegada">Data de chegada</string>
    <string name="saida">Data de saída</string>
    <string name="orcamento">Orçamento</string>
    <string name="qtd_pessoas">Quantidade de pessoas</string>
    <string name="salvar">Salvar</string>
    <string name="valor">Valor</string>
    <string name="data">Data</string>
    <string name="selecione">Selecione</string>
    <string name="descricao">Descrição</string>
    <string name="local">Local</string>
    <string name="gastei">Gastei</string>
    <string name="categoria">Categoria</string>
    <string-array name="categoria_gastos">
        <item >Alimentação</item>
        <item >Combustível</item>
        <item >Transporte</item>
        <item >Hospedagem</item>
        <item >Outros</item>
    </string-array>
        <string name="sair">Sair</string>
        <string name="remover_viagem">Remover viagem</string>
        <string name="remover">Remover</string>
        <string name="opcoes">Opções</string>
        <string name="editar">Editar</string>
        <string name="gastos_realizados">Gastos Realizados</string>
        <string name="confirma_remocao">Confirma remoção da viagem?</string>
        <string name="sim">Sim</string>
        <string name="nao">Não</string>
        <string name="bar_sem_fim">Bar sem fim</string>
        <string name="bar_com_fim">Bar com fim</string>
        <string name="abortar">Abortar</string>
        <string name="continuar">Continuar</string>
        <string name="pausar">Pausar</string>
        <string name="modo_viagem">Modo viagem</string>
        <string name="modo_viagem_sumario">Modo viagem sumário</string>
        <string name="informe_valor_limite">Informe valor limite</string>
        <string name="valor_limite">Valor limite</string>
        <string name="valor_limite_sumario">Valor limite sumário</string>
        <string name="manter_logado">Me manter logado</string>
        <string name="registro_salvo">Registro salvo com sucesso!</string>
        <string name="registro_nao_salvo">Ocorreu um erro ao gravar o registro!</string>
        <string name="viagem_nao_existe">A viagem %d não foi encontrada.</string>
        <string name="gasto_nao_existe">O gasto %d da viagem não foi encontrado.</string>

</resources>
