<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dashbord_background"
        android:gravity="clip_horizontal"
        android:paddingTop="80dp" >

        <TextView
            android:id="@+id/txtNovaViagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtAppName"
            android:layout_marginTop="40dp"
            android:layout_toLeftOf="@+id/txtAppName"
            android:clickable="true"
            android:drawableTop="@drawable/nova_viagem"
            android:onClick="selecionarOpcaoOnClick"
            android:text="@string/nova_viagem"
            android:textColor="@color/branco"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtNovoGasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txtNovaViagem"
            android:layout_alignBottom="@+id/txtNovaViagem"
            android:layout_toRightOf="@+id/txtAppName"
            android:clickable="true"
            android:drawableTop="@drawable/novo_gasto"
            android:onClick="selecionarOpcaoOnClick"
            android:text="@string/novo_gasto"
            android:textColor="@color/branco"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtMinhasViagens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtNovaViagem"
            android:layout_below="@+id/txtNovaViagem"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:drawableTop="@drawable/minhas_viagens"
            android:onClick="selecionarOpcaoOnClick"
            android:text="@string/minhas_viagens"
            android:textColor="@color/branco"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txtMinhasViagens"
            android:layout_alignBottom="@+id/txtMinhasViagens"
            android:layout_alignLeft="@+id/txtNovoGasto"
            android:clickable="true"
            android:drawableTop="@drawable/config"
            android:onClick="selecionarOpcaoOnClick"
            android:text="@string/configuracoes"
            android:textColor="@color/branco"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>

</LinearLayout>
